syntax = "proto3";

package protobuf;

option go_package = "github.com/ytake/student-actors/event";

message ClassHasStarted {
  string subject = 1;
}

message TestWasGiven {
  string subject = 1;
}

message TestSubmitted {
  string subject = 1;
  string name = 2;
}

message TestReceived {
  string subject = 1;
}

message TestFinished {
  string subject = 1;
}
